# meal-prep-agent

./: .env.example  .gitignore  README.md  enhanced_nutrition_results.json  enhanced_nutrition_summary.txt  full_macro_extraction_demo.json  full_macro_extraction_summary.txt  main.py  manage_cache.py  pyproject.toml  run_tests.py  tesco_scraper_results.json  tesco_scraper_summary.txt  test_agent.py  test_cache.py  test_tesco.py
meal_prep_agent/: agent.py  agent_v2.py  nutrition_cache.py  simple_agent.py  tesco_api.py  tesco_mock.py  tesco_real.py  tesco_scraper.py  tesco_simple.py  tesco_working.py  tools.py
tests/: test_tesco_scraper.py
